Adding docker build support

--- a/src/cpp/config.h.in
+++ b/src/cpp/config.h.in
@@ -1,6 +1,8 @@
 #define BUILD_PROJECT_VERSION       "@PROGRAM_VER@"
 #define BUILD_QUICKFIX_VERSION      "@QUICKFIX_GITHUB_TAG@"
 #define BUILD_PUGIXML_VERSION       "@PUGIXML_GITHUB_TAG@"
+#define BUILD_SPDLOG_VERSION        "@SPDLOG_GITHUB_TAG@"
+#define BUILD_TYPE                  "@CMAKE_BUILD_TYPE@"
 #define BUILD_x86                   "@BUILD_x86@"
 #define BUILD_DEBUG                 "@BUILD_DEBUG@"
 #define BUILD_SHARED_LIBRARY        "@BUILD_LIBRARY@"
@@ -14,10 +16,6 @@
 #define BUILD_BINARY_DIR            "@CMAKE_BINARY_DIR@"
 #define BUILD_C_COMPILER            "@CMAKE_C_COMPILER_ID@"
 #define BUILD_CXX_COMPILER_ID       "@CMAKE_CXX_COMPILER_ID@"
-#define BUILD_BOOST_VERSION         "@Boost_VERSION@"
-#define BUILD_BOOST_LIB_VERSION     "@Boost_LIB_VERSION@"
-#define BUILD_BOOST_MULTITHREADED   "@Boost_USE_MULTITHREADED@"
-#define BUILD_BOOST_STATIC          "@Boost_USE_STATIC_LIBS@"
 #define BUILD_COMPILER              "@Boost_COMPILER@"
 #define BUILD_THREAD_IMPL           "@Boost_THREADAPI@"
 #define BUILD_UNIX                  "@UNIX@"
@@ -31,4 +29,3 @@
 #define BUILD_GIT_SHA1              "@GIT_SHA1@"
 #define BUILD_GIT_DATE              "@GIT_DATE@"
 #define BUILD_DATE                  "@BUILD_DATE@"
-#define BUILD_KX_VER                "@KX_VER@"
